--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       }
     ],
     "paths": {
-      "/lib/*": ["./src/*"]
+      "@lib/*": ["./src/lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
